--- a/reactapp/package.json
+++ b/reactapp/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "-": "^0.0.1",
     "@emotion/react": "^11.11.0",
     "@mantine/core": "^6.0.10",
     "@mantine/ds": "^6.0.10",
@@ -13,7 +14,9 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "save": "^2.9.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
