--- a/reactapp/package.json
+++ b/reactapp/package.json
@@ -9,11 +9,13 @@
     "@mantine/ds": "^6.0.10",
     "@mantine/form": "^6.0.11",
     "@mantine/hooks": "^6.0.10",
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.7",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "save": "^2.9.0",
