updated logout and jwt token expiration checking

--- a/springapp/pom.xml
+++ b/springapp/pom.xml
@@ -56,6 +56,11 @@
 			<artifactId>jjwt</artifactId>
 			<version>0.9.1</version>
 		</dependency>
+		<dependency>
+		    <groupId>com.auth0</groupId>
+		    <artifactId>java-jwt</artifactId>
+		    <version>4.2.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
