--- a/springapp/src/main/resources/application.properties
+++ b/springapp/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.jpa.hibernate.ddl-auto= update
 spring.datasource.url=jdbc:mysql://localhost:3306/test?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=MySQL123@#
+spring.datasource.password=1234
