--- a/reactapp/package.json
+++ b/reactapp/package.json
@@ -4,16 +4,17 @@
   "private": true,
   "dependencies": {
     "-": "^0.0.1",
-    "@emotion/react": "^11.11.0",
-    "@mantine/core": "^6.0.10",
-    "@mantine/ds": "^6.0.10",
-    "@mantine/form": "^6.0.11",
-    "@mantine/hooks": "^6.0.10",
+    "@emotion/react": "^11.11.1",
+    "@mantine/core": "^6.0.16",
+    "@mantine/dates": "^6.0.16",
+    "@mantine/form": "^6.0.16",
+    "@mantine/hooks": "^6.0.16",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "dayjs": "^1.11.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.7",
