--- a/reactapp/package.json
+++ b/reactapp/package.json
@@ -9,6 +9,7 @@
     "@mantine/dates": "^6.0.16",
     "@mantine/form": "^6.0.16",
     "@mantine/hooks": "^6.0.16",
+    "@mantine/notifications": "^6.0.16",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
