Added support for email verification

--- a/springapp/src/main/resources/application.properties
+++ b/springapp/src/main/resources/application.properties
@@ -3,6 +3,13 @@ spring.datasource.url=jdbc:mysql://localhost:3306/finace?createDatabaseIfNotExis
 spring.datasource.username=root
 spring.datasource.password=examly
 
+#SMTP
+spring.mail.host=smtp.office365.com
+spring.mail.port=587
+spring.mail.username=paymint.ltd@outlook.com
+spring.mail.password=Udhaya@123
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
 
 #Hibernate
