--- a/reactapp/package.json
+++ b/reactapp/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.4.0",
     "dayjs": "^1.11.9",
     "react": "^18.2.0",
+    "easy-peasy": "^6.0.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.11.2",
