--- a/reactapp/package.json
+++ b/reactapp/package.json
@@ -20,10 +20,11 @@
     "file-saver": "^2.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "4.10.1",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
-    "react-icons": "4.10.1",
+    "redux-persist": "^6.0.0",
     "save": "^2.9.0",
     "web-vitals": "^2.1.4"
   },
