Ui and Functional Changes on Debt Module

--- a/springapp/src/main/resources/application.properties
+++ b/springapp/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/finace?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=examly
-
+#spring.datasource.username=root
+#spring.datasource.password=examly
+spring.datasource.username=hari1309
+spring.datasource.password=Hari@1309
 #SMTP
 spring.mail.host=smtp.office365.com
 spring.mail.port=587
