--- a/reactapp/package.json
+++ b/reactapp/package.json
@@ -18,6 +18,8 @@
     "dayjs": "^1.11.9",
     "easy-peasy": "^6.0.0",
     "file-saver": "^2.0.5",
+    "loadash": "^1.0.0",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "4.10.1",
