--- a/reactapp/package.json
+++ b/reactapp/package.json
@@ -20,7 +20,6 @@
     "easy-peasy": "^6.0.0",
     "faker": "^6.6.6",
     "file-saver": "^2.0.5",
-    "loadash": "^1.0.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
@@ -31,6 +30,7 @@
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
     "save": "^2.9.0",
+    "tinycolor2": "^1.6.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
