--- a/springapp/src/main/resources/application.properties
+++ b/springapp/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/finace?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/finance?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=examly
 
